Fix NaN memory errors.

--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -24,9 +24,9 @@
             {{#if reachable}}
                 <div class="membar-bg">
                     <div class="mem-colors">
-                        <div class="erlang-mem mem-color" {{bindAttr style="mem_erlang_style"}} name=""></div>
-                        <div class="non-erlang-mem mem-color" {{bindAttr style="mem_non_erlang_style"}} name=""></div>
-                        <div class="unknown-mem" {{bindAttr style="mem_free_style"}}></div>
+                        <div class="erlang-mem mem-color" {{bindAttr style="mem_erlang_style"}} {{bindAttr name="mem_erlang_ceil"}}></div>
+                        <div class="non-erlang-mem mem-color" {{bindAttr style="mem_non_erlang_style"}} {{bindAttr name="mem_non_erlang"}}></div>
+                        <div class="unknown-mem" {{bindAttr style="mem_free_style"}} {{bindAttr name="mem_free_readable"}}></div>
                     </div>
                     <div class="membar-fg"></div>
                 </div>
