--- a/priv/admin/css/ring.styl
+++ b/priv/admin/css/ring.styl
@@ -32,9 +32,29 @@ CSS to be applied ONLY on the snapshot page
 
   /* RESPONSIVE MEDIA QUERIES */
 
+  @media screen and (max-width : 750px)
+
+    #ring-filter
+      absoluteLeft(50%, 100px)
+      width        : 200px
+      padding-left : 0
+      float        : none
+      margin       : 66px 0 0 -100px
+
+    .pagination.first
+      margin-top : 60px
+
   @media screen and (max-width : 649px)
       
     .gui-light span
       display : none
+
+  @media screen and (max-width : 500px)
+
+    #ring-filter
+      margin-top : 40px
+
+    .pagination.first
+      margin-top : 30px
 
   /* END RESPONSIVE MEDIA QUERIES */
