--- a/priv/admin/js/templates/ring.hbs
+++ b/priv/admin/js/templates/ring.hbs
@@ -14,7 +14,7 @@
     <div class="clear"></div>
   </section>
 
-  <ul class="pagination gui-text">
+  <ul class="pagination first gui-text">
     <li name="prev"><span class="paginator" {{action prevPage href=true target="controller"}}>Prev</span></li>
     {{#each pages}}
       {{view RiakControl.PaginationItemView contentBinding="this"}}
