--- a/priv/admin/js/templates/staged_cluster_item.hbs
+++ b/priv/admin/js/templates/staged_cluster_item.hbs
@@ -8,7 +8,7 @@
         </div>
         <div class="item2 gui-text ring-pct-box">
             <div class="left gui-text pct-box">
-                <span class="ring-pct">{{ring_pct_readable}}%</span>
+                <span class="ring-pct">{{ringPctReadable}}%</span>
             </div>
             <div class="clear"></div>
         </div>
