--- a/priv/admin/js/templates/current_cluster_item.hbs
+++ b/priv/admin/js/templates/current_cluster_item.hbs
@@ -16,7 +16,7 @@
         <div class="item3 gui-text ring-pct-box">
             <div {{bindAttr class="coloredArrows"}}></div>
             <div class="left gui-text pct-box">
-                <span class="ring-pct">{{ring_pct_readable}}%</span>
+                <span class="ring-pct">{{ringPctReadable}}%</span>
             </div>
             <div class="clear"></div>
         </div>
@@ -24,13 +24,13 @@
             {{#if reachable}}
                 <div class="membar-bg">
                     <div class="mem-colors">
-                        <div class="erlang-mem mem-color" {{bindAttr style="mem_erlang_style"}} {{bindAttr name="mem_erlang_ceil"}}></div>
-                        <div class="non-erlang-mem mem-color" {{bindAttr style="mem_non_erlang_style"}} {{bindAttr name="mem_non_erlang"}}></div>
-                        <div class="unknown-mem" {{bindAttr style="mem_free_style"}} {{bindAttr name="mem_free_readable"}}></div>
+                        <div class="erlang-mem mem-color" {{bindAttr style="memErlangStyle"}} {{bindAttr name="memErlangCeil"}}></div>
+                        <div class="non-erlang-mem mem-color" {{bindAttr style="memNonErlangStyle"}} {{bindAttr name="memNonErlang"}}></div>
+                        <div class="unknown-mem" {{bindAttr style="memFreeStyle"}} {{bindAttr name="memFreeReadable"}}></div>
                     </div>
                     <div class="membar-fg"></div>
                 </div>
-                <span class="used-memory">{{mem_used_readable}}%</span>
+                <span class="used-memory">{{memUsedReadable}}%</span>
             {{else}}
                 <div class="membar-bg">
                     <div class="mem-colors">
@@ -58,16 +58,16 @@
                 {{/if}}
                 <div class="replacement-controls">
                     <div class="gui-radio-wrapper default">
-                        <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name" id="normal_leave_radio"}} checked="checked"/>
-                        <label class="serif" {{bindAttr for="normal_leave_radio"}}>Allow this node to leave normally.</label>
+                        <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name" id="normalLeaveRadio"}} checked="checked"/>
+                        <label class="serif" {{bindAttr for="normalLeaveRadio"}}>Allow this node to leave normally.</label>
                     </div>
                     <div class="gui-radio-wrapper">
-                        <input class="gui-radio" type="radio" value="remove" {{bindAttr name="name" id="force_leave_radio"}} />
-                        <label class="serif" {{bindAttr for="force_leave_radio"}}>Force this node to leave.</label>
+                        <input class="gui-radio" type="radio" value="remove" {{bindAttr name="name" id="forceLeaveRadio"}} />
+                        <label class="serif" {{bindAttr for="forceLeaveRadio"}}>Force this node to leave.</label>
                     </div>
-                    <div {{bindAttr class="replace_radio_classes"}}>
-                        <input class="gui-radio" type="radio" value="replace" {{bindAttr name="name" id="replace_radio"}} />
-                        <label class="serif" {{bindAttr for="replace_radio"}}>Choose a new node to replace this one.</label>
+                    <div {{bindAttr class="replaceRadioClasses"}}>
+                        <input class="gui-radio" type="radio" value="replace" {{bindAttr name="name" id="replaceRadio"}} />
+                        <label class="serif" {{bindAttr for="replaceRadio"}}>Choose a new node to replace this one.</label>
                     </div>
                     <div class="extra-actions">
                         <div class="right-angle-arrow"></div>
@@ -78,8 +78,8 @@
                                 {{view Ember.Select classNames="gui-dropdown" contentBinding="controller.joiningNodes" optionLabelPath="content.name"}}
                             </div>
                             <div class="gui-checkbox-wrapper">
-                                <input class="gui-checkbox" type="checkbox" {{bindAttr name="name" id="force_replace_check"}} value="true" />
-                                <label class="serif" {{bindAttr for="force_replace_check"}}>Force this replacement?</label>
+                                <input class="gui-checkbox" type="checkbox" {{bindAttr name="name" id="forceReplaceCheck"}} value="true" />
+                                <label class="serif" {{bindAttr for="forceReplaceCheck"}}>Force this replacement?</label>
                             </div>
                             <div class="clear"></div>
                             <div class="disabler"></div>
