--- a/priv/admin/css/general.styl
+++ b/priv/admin/css/general.styl
@@ -107,7 +107,7 @@ th
 #nav-graphs    a { background-position : 14px -192px }
 #nav-logs      a { background-position : 14px -248px }
 #nav-support   a { background-position : 14px -300px }
-#nav-node-management a { background-position : 15px -392px   }
+#nav-nodes     a { background-position : 15px -392px   }
 
 .nav-item
   dimensions(63px, 49px)
@@ -599,7 +599,7 @@ input.gui-point-button:active, input.gui-rect-button:active, input.gui-point-but
   #nav-cluster a
     background-position : 8px 11px
 
-  #nav-node-management a
+  #nav-nodes a
     background-position : 7px -269px
 
   #nav-ring a
