--- a/priv/admin/css/style.styl
+++ b/priv/admin/css/style.styl
@@ -10,5 +10,5 @@ Imports and arranges all other stylus files.
 @import general
 @import snapshot
 @import cluster
-@import node_management
+@import nodes
 @import ring
