--- a/priv/admin/css/compiled/style.css
+++ b/priv/admin/css/compiled/style.css
@@ -701,7 +701,6 @@ input.gui-point-button-right:active {
 .gui-text-flat,
 .gui-text,
 .gui-text-bold,
-#cluster-page .plan-details,
 #cluster-page .plan-details {
   text-shadow: none;
   color: #ccc;
@@ -1598,38 +1597,27 @@ input.gui-point-button-right:active {
     display: none;
   }
 }
-#cluster-page .warning {
-  display: block;
-  padding: 10px 0 0;
-  color: #f05f5f;
+#nodes-page .right {
+  float: right;
 }
-#cluster-page #current-area,
-#cluster-page #planned-area {
-  float: left;
-  width: 47%;
+#nodes-page .gui-point-button-right,
+#nodes-page .gui-rect-button {
+  margin-right: 10px;
+  margin-top: 35px;
 }
-#cluster-page #current-area {
-  margin: 0 0 45px 0;
+#nodes-page #current-area {
+  max-width: 850px;
+  margin: 0 auto 45px auto;
+  padding-top: 40px;
 }
-#cluster-page #area-separator {
-  width: 6%;
-  height: 450px;
-  float: left;
-  text-align: center;
-}
-#cluster-page #area-separator div {
-  margin: 0 auto;
-  width: 1px;
-  height: 100%;
-  background: rgba(255,255,255,0.18);
-}
-#cluster-page span.gui-text-flat {
+#nodes-page #current-area > span.gui-text-flat {
   line-height: 1.5;
+  display: block;
 }
-#cluster-page h3 {
+#nodes-page h3 {
   font-family: 'noticia', georgia, serif;
 }
-#cluster-page .spinner-box {
+#nodes-page .spinner-box {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -1637,11 +1625,11 @@ input.gui-point-button-right:active {
   background: rgba(255,255,255,0.05);
   padding: 25px;
 }
-#cluster-page .spinner-box img,
-#cluster-page .spinner-box h4 {
+#nodes-page .spinner-box img,
+#nodes-page .spinner-box h4 {
   vertical-align: middle;
 }
-#cluster-page .spinner-box h4 {
+#nodes-page .spinner-box h4 {
   opacity: 0.8;
   filter: alpha(opacity=80);
   display: inline-block;
@@ -1649,194 +1637,107 @@ input.gui-point-button-right:active {
   padding-left: 10px;
   line-height: 1.2;
 }
-#cluster-page .actions-container {
-  -webkit-transition: height 0.4s ease;
-  -moz-transition: height 0.4s ease;
-  -ms-transition: height 0.4s ease;
-  -webkit-transition: height 0.4s ease;
-  -moz-transition: height 0.4s ease;
-  -o-transition: height 0.4s ease;
-  transition: height 0.4s ease;
-  overflow: hidden;
-  height: 0;
-  margin-bottom: 0;
-}
-#cluster-page .open .actions-container {
-  -webkit-transition: height 0.4s ease;
-  -moz-transition: height 0.4s ease;
-  -ms-transition: height 0.4s ease;
-  -webkit-transition: height 0.4s ease;
-  -moz-transition: height 0.4s ease;
-  -o-transition: height 0.4s ease;
-  transition: height 0.4s ease;
-  height: 375px;
-  margin-bottom: 25px;
-}
-#cluster-page .gui-light {
+#nodes-page .gui-light {
   vertical-align: middle;
   padding: 9px 5px 9px 14px;
   margin-left: -6px;
   margin-top: -7px;
 }
-#cluster-page .field-container {
-  width: 75%;
+#nodes-page .field-container {
+  width: 86%;
   vertical-align: middle;
 }
-#cluster-page .gui-field {
+#nodes-page .gui-field {
   margin-right: 0;
   overflow: hidden;
 }
-#cluster-page #add-node {
-  padding-top: 40px;
-  margin-bottom: 45px;
-}
-#cluster-page .add-node-table tr td {
-  padding-top: 25px;
-}
-#cluster-page .list-header {
+#nodes-page .list-header {
   min-height: 18px;
 }
-#cluster-page .list-header li {
+#nodes-page .list-header li {
   float: left;
   margin-bottom: 30px;
 }
-#cluster-page .list-header li h4 {
+#nodes-page .list-header li h4 {
   display: inline-block;
 }
-#cluster-page #node-list,
-#cluster-page #planned-list {
+#nodes-page #node-list {
   margin-top: 20px;
 }
-#cluster-page #node-list .item1 {
-  width: 18%;
+#nodes-page #node-list .item1 {
+  width: 6%;
 }
-#cluster-page #node-list .item2 {
-  width: 42%;
+#nodes-page #node-list .item2 {
+  width: 10%;
 }
-#cluster-page #node-list .item3 {
-  width: 18%;
+#nodes-page #node-list .item3 {
+  width: 56%;
 }
-#cluster-page #node-list .item4 {
-  width: 22%;
+#nodes-page #node-list .item4 {
+  width: 13%;
 }
-#cluster-page .node {
+#nodes-page #node-list .item5 {
+  width: 15%;
+}
+#nodes-page .node {
   margin-bottom: 10px;
   position: relative;
 }
-#cluster-page .node > div {
+#nodes-page .node > div {
   float: left;
 }
-#cluster-page .node > div.clear {
+#nodes-page .node > div.clear {
   float: none;
 }
-#cluster-page .toggle-container {
-  overflow: visible;
-  padding: 0;
-}
-#cluster-page .toggle-container .actions-toggle {
-  width: 82px;
-  height: 30px;
-  position: relative;
-  overflow: visible;
-  padding: 0;
-  background: url("/admin/ui/images/actions-toggle-text.png") -5px top no-repeat rgba(0,0,0,0.3);
-  margin-top: 3px;
-}
-#cluster-page .toggle-container .actions-toggle a {
-  width: 48px;
-  height: 34px;
-  -webkit-transition: left 0.2s ease;
-  -moz-transition: left 0.2s ease;
-  -ms-transition: left 0.2s ease;
-  -webkit-transition: left 0.2s ease;
-  -moz-transition: left 0.2s ease;
-  -o-transition: left 0.2s ease;
-  transition: left 0.2s ease;
-  position: absolute;
+#nodes-page .node .gui-radio-wrapper {
+  width: 25px;
+  height: 24px;
+  text-align: center;
   display: inline-block;
-  background: url("/admin/ui/images/actions-toggle-slider.png") left top no-repeat transparent;
+  position: relative;
+}
+#nodes-page .node .gui-radio-wrapper .disabler {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
   top: 0;
-  left: -5px;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  display: none;
 }
-#cluster-page .open .actions-toggle a {
-  -webkit-transition: left 0.2s ease;
-  -moz-transition: left 0.2s ease;
-  -ms-transition: left 0.2s ease;
-  -webkit-transition: left 0.2s ease;
-  -moz-transition: left 0.2s ease;
-  -o-transition: left 0.2s ease;
-  transition: left 0.2s ease;
-  left: 38px;
+#nodes-page .node .gui-radio-wrapper .disabler.show {
+  display: block;
 }
-#cluster-page .name-box {
+#nodes-page .node .item1 .gui-radio-wrapper {
+  margin-left: 4px;
+}
+#nodes-page .node .item2 .gui-radio-wrapper {
+  margin-left: 8px;
+}
+#nodes-page .node input[type=radio] {
+  display: inline;
+  float: none;
+}
+#nodes-page .name-box {
   overflow: visible;
 }
-#cluster-page .ring-pct,
-#cluster-page .used-memory,
-#cluster-page .action-name {
+#nodes-page .ring-pct,
+#nodes-page .used-memory,
+#nodes-page .action-name {
   font-family: 'menlo', 'consolas', 'monaco', monospace;
 }
-#cluster-page .used-memory {
+#nodes-page .used-memory {
   display: inline-block;
   padding: 0 0 0 5px;
   vertical-align: middle;
 }
-#cluster-page .action-name {
-  display: inline-block;
-  padding-top: 8px;
-}
-#cluster-page .replacing-box .field-container {
-  width: 100%;
-}
-#cluster-page #planned-list .item1 {
-  width: 40%;
-}
-#cluster-page #planned-list .item2 {
-  width: 17%;
-}
-#cluster-page #planned-list .item3 {
-  width: 17%;
-}
-#cluster-page #planned-list .item4 {
-  width: 26%;
-}
-#cluster-page .plan-details-header {
-  margin-top: 30px;
-  padding: 10px 0;
-}
-#cluster-page .accept-plan {
-  position: relative;
-  padding: 15px 0;
-  margin-top: 15px;
-}
-#cluster-page .clear-plan-box {
-  border-top: 1px solid rgba(255,255,255,0.18);
-  margin-top: 25px;
-  padding-top: 25px;
-}
-#cluster-page .clear-plan-box a {
-  display: block;
-  margin-top: 15px;
-  margin-left: -5px;
-}
-#cluster-page .plan-details {
-  font-family: 'noticia', georgia, serif;
-  line-height: 1.5;
-}
-#cluster-page #commit-button {
-  position: absolute;
-  right: 0;
-  top: 12px;
-}
-#cluster-page .button-column {
-  text-align: right;
-}
-#cluster-page .pct-box {
+#nodes-page .pct-box {
   margin-top: 8px;
   display: inline-block;
   vertical-align: middle;
 }
-#cluster-page .pct-arrows {
+#nodes-page .pct-arrows {
   width: 19px;
   height: 33px;
   background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat transparent;
@@ -1844,64 +1745,26 @@ input.gui-point-button-right:active {
   display: inline-block;
   vertical-align: middle;
 }
-#cluster-page .pct-gaining {
+#nodes-page .pct-gaining {
   background-position: -19px top;
 }
-#cluster-page .pct-losing {
+#nodes-page .pct-losing {
   background-position: -38px top;
 }
-#cluster-page .pct-static {
+#nodes-page .pct-static {
   background-position: left top;
 }
-#cluster-page .green-pct-arrow {
+#nodes-page .green-pct-arrow {
   width: 19px;
   height: 33px;
   background: url("/admin/ui/images/pct-arrows-sprite.png") no-repeat -57px top transparent;
   margin: 0 5px 0 0;
   display: none;
 }
-#cluster-page .error-message {
-  font-family: 'noticia', georgia, serif;
-  -webkit-box-shadow: 0 2px 3px rgba(0,0,0,0.35);
-  -moz-box-shadow: 0 2px 3px rgba(0,0,0,0.35);
-  box-shadow: 0 2px 3px rgba(0,0,0,0.35);
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  font-size: 14px;
-  font-style: italic;
-  color: #ccc;
-  padding: 8px 10px 9px 12px;
-  background: rgba(232,78,78,0.5);
-  border: 1px solid rgba(235,105,105,0.5);
-}
-#cluster-page .error-message .error-link {
-  font-family: 'titillium', helvetica, arial, sans-serif;
-  font-weight: bold;
-  padding-left: 5px;
-}
-#cluster-page .error-message .error-link:hover {
-  text-decoration: underline;
-}
-#cluster-page .error-message .close-error {
-  width: 16px;
-  height: 16px;
-  opacity: 0.6;
-  filter: alpha(opacity=60);
-  cursor: pointer;
-  display: inline-block;
-  float: right;
-  vertical-align: middle;
-  background: url("/admin/ui/images/close-error.png") left top no-repeat transparent;
-}
-#cluster-page .error-message .close-error:hover {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-#cluster-page .memory-box {
+#nodes-page .memory-box {
   width: 175px;
 }
-#cluster-page .membar-bg {
+#nodes-page .membar-bg {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -1911,7 +1774,7 @@ input.gui-point-button-right:active {
   display: inline-block;
   vertical-align: middle;
 }
-#cluster-page .membar-fg {
+#nodes-page .membar-fg {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -1934,20 +1797,20 @@ input.gui-point-button-right:active {
   z-index: 5;
   border: 2px solid #1d1d1d;
 }
-#cluster-page .mem-colors {
+#nodes-page .mem-colors {
   width: 75px;
   height: 26px;
   float: left;
   margin: 2px 0 0 2px;
 }
-#cluster-page .membar-mem {
+#nodes-page .membar-mem {
   width: auto;
   height: 26px;
   background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
   float: left;
   z-index: 1;
 }
-#cluster-page .non-erlang-mem {
+#nodes-page .non-erlang-mem {
   width: auto;
   height: 26px;
   background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
@@ -1955,7 +1818,7 @@ input.gui-point-button-right:active {
   z-index: 1;
   background-color: rgba(65,179,243,0.8);
 }
-#cluster-page .erlang-mem {
+#nodes-page .erlang-mem {
   width: auto;
   height: 26px;
   background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
@@ -1963,7 +1826,7 @@ input.gui-point-button-right:active {
   z-index: 1;
   background-color: rgba(70,166,55,0.8);
 }
-#cluster-page .unknown-mem {
+#nodes-page .unknown-mem {
   width: auto;
   height: 26px;
   background: url("/admin/ui/images/mem-bar-overlay.png") left top repeat transparent;
@@ -1972,252 +1835,73 @@ input.gui-point-button-right:active {
   background-color: #404040;
   width: 100%;
 }
-#cluster-page .actions-pointer {
-  width: 72px;
-  height: 13px;
-  background: url("/admin/ui/images/pointer.png") center top no-repeat transparent;
-  margin-top: 8px;
-}
-#cluster-page .actions-box {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  width: 92%;
-  background: rgba(0,0,0,0.35);
-  margin-bottom: 15px;
-  border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 18px;
-  margin-right: 33px;
-  position: relative;
-}
-#cluster-page .actions-box > h4 {
-  display: block;
-  border-bottom: 1px solid rgba(255,255,255,0.18);
-  padding: 0 0 12px;
-}
-#cluster-page .actions-box > div > span {
-  font-family: 'noticia', georgia, serif;
-  color: #efefef;
-  padding-left: 3px;
-}
-#cluster-page .extra-actions {
-  opacity: 0.32;
-  filter: alpha(opacity=32);
-  padding-bottom: 25px;
-  height: 35px;
-  position: relative;
-}
-#cluster-page .extra-actions > div {
-  float: left;
-}
-#cluster-page .extra-actions .gui-checkbox-wrapper {
-  margin-left: 15px;
-}
-#cluster-page .extra-actions.active {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-#cluster-page .replacement-controls {
-  width: auto;
-  margin-top: 18px;
-  border-bottom: 1px solid rgba(255,255,255,0.18);
-  margin-bottom: 10px;
-}
-#cluster-page .replacement-controls div {
-  margin-bottom: 8px;
-}
-#cluster-page .replacement-controls select {
-  margin-top: -38px;
-}
-#cluster-page .replacement-node-dropdown {
-  margin-bottom: 5px;
-}
-#cluster-page .right-angle-arrow {
-  width: 15px;
-  height: 18px;
-  background: url("/admin/ui/images/right-angle-arrow.png") left top no-repeat transparent;
-  margin: 0 10px 0 10px;
-}
-#cluster-page .disabler {
-  background: #f00;
-  opacity: 0.2;
-  filter: alpha(opacity=20);
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: transparent;
-}
-#cluster-page .stage-button {
-  float: right;
-}
-#cluster-page .stage-instructions {
-  float: left;
-  display: block;
-  width: 50%;
-}
-#cluster-page .no-joining-nodes {
-  padding-top: 6px;
-}
-#cluster-page .slide-up {
+#nodes-page .slide-up {
   margin-top: -35px;
 }
-#cluster-page .semi-transparent {
+#nodes-page .semi-transparent {
   opacity: 0.32;
   filter: alpha(opacity=32);
 }
-@media screen and (max-width : 1200px) {
-  #cluster-page #area-separator {
-    display: none;
+@media screen and (max-width : 800px) {
+  #nodes-page #node-list .item1 {
+    width: 8%;
   }
-  #cluster-page #current-area,
-  #cluster-page #planned-area {
-    width: 100%;
+  #nodes-page #node-list .item2 {
+    width: 10%;
   }
-  #cluster-page #planned-area {
-    padding-top: 30px;
-    border-top: 1px solid rgba(255,255,255,0.18);
+  #nodes-page #node-list .item3 {
+    width: 49%;
   }
-  #cluster-page .field-container {
-    width: 90%;
+  #nodes-page #node-list .item4 {
+    width: 15%;
   }
-  #cluster-page #node-list .item1 {
-    width: 100px;
+  #nodes-page #node-list .item5 {
+    width: 18%;
   }
-  #cluster-page #node-list .item2 {
-    width: 500px;
-  }
-  #cluster-page #node-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item4 {
-    width: 150px;
-  }
-  #cluster-page #planned-list .item1 {
-    width: 300px;
-  }
-  #cluster-page #planned-list .item2 {
-    width: 100px;
-    margin-left: 25px;
-  }
-  #cluster-page #planned-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #planned-list .item4 {
-    width: 350px;
-  }
-}
-@media screen and (max-width : 950px) {
-  #cluster-page #node-list .item1 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item2 {
-    width: 400px;
-  }
-  #cluster-page #node-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item4 {
-    width: 150px;
-  }
-  #cluster-page #planned-list .item1 {
-    width: 275px;
-  }
-  #cluster-page #planned-list .item2 {
-    width: 100px;
-  }
-  #cluster-page #planned-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #planned-list .item4 {
-    width: 225px;
-  }
-}
-@media screen and (max-width : 850px) {
-  #cluster-page #node-list .item1 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item2 {
-    width: 300px;
-  }
-  #cluster-page #node-list .item2 .field-container {
+  #nodes-page #node-list .field-container {
     width: 75%;
   }
-  #cluster-page #node-list .item3 {
-    width: 100px;
+}
+@media screen and (max-width : 670px) {
+  #nodes-page #node-list .memory-box {
+    padding-top: 7px;
   }
-  #cluster-page #node-list .item4 {
-    width: 150px;
-  }
-  #cluster-page #planned-list .item3 {
-    display: none;
-  }
-  #cluster-page .used-memory {
+  #nodes-page #node-list .membar-bg {
     display: none;
   }
 }
-@media screen and (max-width : 700px) {
-  #cluster-page #node-list .item1 {
-    width: 100px;
+@media screen and (max-width : 570px) {
+  #nodes-page #node-list .item1 {
+    width: 12%;
   }
-  #cluster-page #node-list .item2 {
-    width: 200px;
+  #nodes-page #node-list .item2 {
+    width: 15%;
   }
-  #cluster-page #node-list .item2 .field-container {
-    width: 75%;
+  #nodes-page #node-list .item3 {
+    width: 53%;
   }
-  #cluster-page #node-list .item3 {
-    width: 100px;
-  }
-  #cluster-page #node-list .item4 {
-    width: 150px;
-  }
-  #cluster-page #planned-list .item1 {
-    width: 200px;
-  }
-  #cluster-page #planned-list .item2 {
-    width: 100px;
-    margin-left: 0;
-  }
-  #cluster-page #planned-list .item4 {
-    width: 200px;
-  }
-  #cluster-page .gui-light {
+  #nodes-page #node-list .item4 {
     display: none;
   }
-}
-@media screen and (max-width : 600px) {
-  #cluster-page #node-list .item1 {
-    display: none;
-  }
-  #cluster-page #node-list .item2 {
-    width: 40%;
-  }
-  #cluster-page #node-list .item2 .field-container {
-    width: 95%;
-  }
-  #cluster-page #node-list .item4 {
-    width: 100px;
-  }
-  #cluster-page #planned-list .item1 {
-    width: 40%;
-  }
-  #cluster-page #planned-list .item1 .field-container {
-    width: 95%;
-  }
-  #cluster-page #planned-list .item2 {
+  #nodes-page #node-list .item5 {
     width: 20%;
-    margin-right: 2%;
   }
-  #cluster-page #planned-list .item4 {
-    width: 38%;
+}
+@media screen and (max-width : 400px) {
+  #nodes-page #node-list .item1 {
+    width: 12%;
   }
-  #cluster-page #planned-list .item4 .field-container {
-    width: 95%;
+  #nodes-page #node-list .item2 {
+    width: 15%;
   }
-  #cluster-page .actions-container {
+  #nodes-page #node-list .item3 {
+    width: 47%;
+  }
+  #nodes-page #node-list .item4 {
     display: none;
+  }
+  #nodes-page #node-list .item5 {
+    width: 15%;
   }
 }
 #ring-page #ring-filter {
