Use correct values.

--- a/priv/admin/js/templates/current_nodes_item.hbs
+++ b/priv/admin/js/templates/current_nodes_item.hbs
@@ -2,13 +2,13 @@
     <div class="node">
         <div class="item1">
             <div {{bindAttr class="stopRadioClasses"}}>
-                <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name" id="stopRadio"}} />
+                <input class="gui-radio" type="radio" value="stop" {{bindAttr name="name" id="stopRadio"}} />
                 <div {{bindAttr class="stopDisablerClasses"}}></div>
             </div>
         </div>
         <div class="item2">
             <div {{bindAttr class="downRadioClasses"}}>
-                <input class="gui-radio" type="radio" value="leave" {{bindAttr name="name" id="downRadio"}} />
+                <input class="gui-radio" type="radio" value="down" {{bindAttr name="name" id="downRadio"}} />
                 <div {{bindAttr class="downDisablerClasses"}}></div>
             </div>
         </div>
