Change convergence message.

--- a/priv/admin/js/templates/cluster.hbs
+++ b/priv/admin/js/templates/cluster.hbs
@@ -104,7 +104,7 @@
                 <div class="spinner-box">
                     {{#if controller.ringNotReady}}
                         <h4 class="gui-headline-bold">
-                            Cannot plan until cluster state has converged. Check "Ring Ready" in "riak-admin ring_status".
+                            Please wait, the ring is converging.
                         </h4>
                     {{else}}
                         {{#if controller.legacyRing}}
